# Lab3

./: CMakeLists.txt  README.md  main.c  makefile  toy_printf.c
task0/: makefile
task1a/: addresses.c  makefile
task1c/: T1c.c  makefile
task1d/: T1d.c  makefile
task2a/: makefile  task2a  toy_printf.c
task2b/: main.c  makefile  toy_printf.c
task2c/: main.c  makefile  toy_printf.c
