cmake_minimum_required(VERSION 3.9)
project(Lab3 C)

set(CMAKE_C_STANDARD 99)
#add_executable(Lab3 task0/main.c task0/toy_printf.c task0/toy_stdio.h)
#add_executable(Lab3 task1a/addresses.c)
#add_executable(Lab3 task1c/T1c.c)
#add_executable(Lab3 task1d/T1d.c)
#add_executable(Lab3 task2a/main.c task2a/toy_printf.c task2a/toy_stdio.h)
#add_executable(Lab3 task2b/main.c task2b/toy_printf.c task2b/toy_stdio.h)
add_executable(Lab3 task2c/main.c task2c/toy_printf.c task2c/toy_stdio.h)